--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
   align-items: flex-start;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgb(243, 243, 243);
 }
 .row {
