--- a/client/src/Styles/App.scss
+++ b/client/src/Styles/App.scss
@@ -7,10 +7,10 @@
 #root {
   width: 100%;
 }
-body {
+.layout{
+  position: relative;
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  height: 100vh;
+
 }
