--- a/client/src/Styles/MainMap.scss
+++ b/client/src/Styles/MainMap.scss
@@ -1,10 +1,6 @@
 @import "./Global.css";
 
 .mainmap-container{
-    background-color: var(--primary-color);
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    flex-basis: 75vh;
+    width: 100%;
 }
