--- a/client/src/Styles/MainNavigation.scss
+++ b/client/src/Styles/MainNavigation.scss
@@ -1,24 +1,61 @@
 @import "./Global.css";
 
-.nav-container{
-    position: fixed;
-    bottom: 0;
-    right: 0;
+.nav-container {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: 25vh;
+  width: 100%;
+  background-color: white;
+  border-radius: 24px 24px 0 0;
+
+  box-shadow: 0px -5px 30px 12px #00000028;
+  .buttons-container {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    justify-content: flex-end;
-    height: 30vh;
+    justify-content: center;
+    flex-basis: 100%;
     width: 100%;
-    background-color: var(--primary-color);
-    border-radius: 24px 24px 0 0;
-    .buttons-container{
-        display: flex;
-        
-        width:100%;
-        height: 100%;
-        button{
-            width: 100%;
+    height: 100%;
+    padding: 25px;
+    gap: 10px;
+
+    // gap: 20px;
+    button {
+      letter-spacing: 1.2px;
+      font-weight: 400;
+      font-size: 18px;
+      border: none;
+      border-radius: 16px;
+      height: 50px;
+      width: 100%;
+    }
+    .lock-btn {
+      background-color: #000000;
+      color: white;
+      &:hover {
+        background-color: #222222;
+      }
+      &:active {
+        background-color: #222222b3;
+      }
+    }
+    .reserve-btn {
+      border: 1px solid #9f9d9d;    
+      background-color: white;
+    //   background-color: rgba(159, 157, 157, 0.25);
+      color: black;
+      &:hover{
+        border: none;
+          background-color: rgba(159, 157, 157, 0.5);
+        }
+        &:active{
+          background-color: rgba(34, 34, 34, 0.3);
         }
     }
+  }
 }
