--- a/client/src/Styles/App.scss
+++ b/client/src/Styles/App.scss
@@ -2,7 +2,7 @@
 * {
   font-family: var(--primary-font);
   font-weight: 800;
-  color: azure;
+  color: rgb(54, 54, 54);
 }
 #root {
   width: 100%;
