--- a/client/src/Styles/MainMap.scss
+++ b/client/src/Styles/MainMap.scss
@@ -2,4 +2,32 @@
 
 .mainmap-container{
     width: 100%;
+    .to-center-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        bottom: 190px;
+        right: 25px;
+        width: 56px;
+        height: 56px;
+        border-radius: 50%;
+        overflow: hidden;
+        background-color: rgb(255, 255, 255);
+        box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.2);
+        z-index: 1;
+        &:hover{
+            background-color: rgb(250, 250, 250);
+        }
+        &:active{
+            background-color: rgb(255, 255, 255);
+            box-shadow: inset 0 0 8px 0px #858585,
+            0px 2px 5px 0px rgb(0, 0, 0, 0.2);;
+            // border: 1px solid rgb(196, 196, 196);
+        }
+        img {
+          width: 24px;
+          height: 24px;
+        }
+      }
 }
