--- a/client/src/Styles/MainMap.scss
+++ b/client/src/Styles/MainMap.scss
@@ -7,7 +7,7 @@
         align-items: center;
         justify-content: center;
         position: absolute;
-        bottom: 190px;
+        bottom: 10px;
         right: 25px;
         width: 56px;
         height: 56px;
@@ -28,6 +28,9 @@
         img {
           width: 24px;
           height: 24px;
+        }
+        &[data-station=true]{
+          bottom: 290px;
         }
       }
 }
