--- a/client/src/Styles/MainNavigation.scss
+++ b/client/src/Styles/MainNavigation.scss
@@ -4,7 +4,8 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 100%;
+  width: 90%;
+  padding: 0 5%;
   display: flex;
   flex-flow: column nowrap;
   gap: 10px;
@@ -14,19 +15,94 @@
   border-radius: 24px 24px 0 0;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
   z-index: 1;
-  .line{
-    width: 80%;
-    height: 2px;
-    border-radius: 99px;
-    background-color: rgba(0, 0, 0, 0.2);
-  }
-  .station-data-container{}
-  .buttons-container {
+  .station-data-container {
+    // border: 2px solid red;
     display: flex;
     flex-flow: column nowrap;
+    width: 100%;
+    margin-top: 10px;
+    justify-content: flex-end;
+    gap: 10px;
+    height: 100%;
+    .primary {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .image {
+        height: 50px;
+        width: 50px;
+        background-color: #000000;
+        margin: 5px;
+      }
+      .text {
+        font-size: 27px;
+        font-weight: 400;
+        margin-right: 20px;
+      }
+    }
+    .station-data {
+      display: flex;
+      margin-top: 20px;
+      justify-content: space-evenly;
+      font-size: 22px;
+      .pseudo-label{
+        position: absolute;
+        opacity: 0.5;
+        left: 50%;
+        font-size: 14px;
+        font-weight: 400;
+        top: 0;
+        transform: translate(-50%, -120%);
+      }
+      .status {
+        font-weight: 300;
+        position: relative;
+      }
+      .type {
+        position: relative;
+        font-weight: 300;
+      }
+      .occupancy {
+        position: relative;
+        font-weight: 300;
+      }
+    }
+    .payment-container {
+      --primary-color: rgba(8, 167, 141, 0.5);
+      background-color: rgba(53, 230, 200, 0.2);
+      border: 1px solid var(--primary-color);
+      border-radius: 8px;
+      height: 45px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 10px;
+      font-size: 14px;
+      .pricing{
+        .price-title{
+          font-weight: 600;
+        }
+        .price{
+          font-weight: 300;
+          opacity: 0.7;
+        }
+      }
+      .info-icon{
+        height: 22px;
+        width: 22px;
+        img{
+          width: 100%;
+          filter: opacity(0.5);
+        }
+      }
+    }
+  }
+  .buttons-container {
+    display: flex;
     justify-content: center;
-    width: 90%;
-    margin: 20px 5%;
+    width: 100%;
+    padding: 15px 0;
+    border-top: 1px solid rgb(0, 0, 0,0.1);
     gap: 10px;
     button {
       letter-spacing: 1.2px;
@@ -72,10 +148,10 @@
     img {
       width: 100%;
     }
-    &[data-station=false]{
+    &[data-station="false"] {
       top: -80px;
     }
-    &[data-station=true]{
+    &[data-station="true"] {
       top: -80px;
     }
     .bicycle-image {
