--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -6,60 +6,92 @@
   margin: 0;
   padding: 0;
   font-family: "Nunito", sans-serif;
-  --button-color-main: rgb(192, 192, 192);
+  --button-color-main: rgb(255, 189, 82);
+}
+
+body, html{
+	font-size: 0.05787037037vw;
+  /* default
+  font-size: 0.05787037037vw;
+  */
+}
+.w-embed svg{
+	width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
+}
+html.stopped{
+	height: 100vh;
+  overflow: hidden;
+}
+@media only screen and (min-width: 1640px) {
+  body, html{
+      font-size: 1px;
+ /* Default = 1px
+ 		Default size: 1920px
+ */
+  }
+  
+}
+@media only screen and (max-width: 991px) {
+  body, html{
+    font-size: 0.13vw;
+  }
+}
+@media only screen and (max-width: 767px) {
+  body, html{
+    font-size: 0.176vw;
+  }
+}
+@media only screen and (max-width: 477px) {
+  body, html{
+    font-size: 0.266vw;
+  }
+}
+*{
+	font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
+}
+h1, h2, h3, h4, h5, h6{
+  font-feature-settings: 'salt' on;
+}
+p, td, tr, tbody, span, div{font-size: 16rem;}
+
+a{
+	color: inherit;
+  text-decoration: none;
+  display: block;
 }
 
 .main-container {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 300rem auto;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(2);
   width: 100%;
-  height: 100%;
-  background-color: rgb(243, 243, 243);
+  height: 100vh;
 }
-.row {
-  border: 1px solid grey;
-  width: 800px;
-  padding: 100px 0;
-}
-
 .wrapper {
-  border: 1px solid grey;
   display: flex;
   width: 100%;
   align-items: center;
   justify-content: center;
   flex-flow: column nowrap;
-  padding: 0px 20%;
+  padding: 0rem 20%;
 }
 
 .wrapper > h2 {
-  font-size: 48px;
-  padding-bottom: 20px;
+  font-size: 48rem;
+  padding-bottom: 20rem;
 }
 
 .wrapper > p {
   text-align: center;
-  font-size: 20px;
+  font-size: 20rem;
   font-weight: 400;
   color: rgb(44, 44, 44);
-  padding-bottom: 20px;
-}
-
-.wrapper > p > b {
-  font-size: 46px;
-}
-/* admin_ui_btn btn_list */
-
-.admin_interface {
-}
-.admin_interface > .admin_switch {
-}
-.admin_interface > .btn_list{
-  
-}
-.admin_interface > .btn_list > .admin_btn{
-
+  padding-bottom: 20rem;
 }
 
 .form-container {
@@ -70,74 +102,96 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  padding: 0px 10%;
-  gap: 5px;
+  padding: 0rem 10%;
+  gap: 5rem;
 }
 
 .form-container > .form > .text-field {
-  padding: 10px 20px;
+  padding: 10rem 20rem;
   width: 100%;
-  border-radius: 12px;
-  border: 1px solid rgb(160, 160, 160);
+  border-radius: 8rem;
+  border: 1rem solid rgb(160, 160, 160);
 }
 
 .form-container > .form > button {
-  padding: 10px 20px;
-  margin-top: 5px;
+  padding: 10rem 20rem;
+  margin-top: 5rem;
   width: 100%;
   border: none;
-  border-radius: 12px;
-  font-size: 14px;
-  background-color: var(--button-color-main);
+  border-radius: 8rem;
+  font-size: 14rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;            
+  transition: 1s;
+  background-size: 200% auto;
+  box-shadow: 0 0 20rem #eee;
+  background-image: linear-gradient(to right, #554431 0%, #da8f26  51%, #554331  100%);
 }
+
+.form-container > .form > button:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
 
 /* Main End*/
 /* Controllers list */
 
 .controllers-list {
   width: 100%;
-  margin-top: 60px;
-  border: 1px solid rgba(128, 128, 128, 0.5);
+  margin-top: 60rem;
+  border: 1rem solid rgba(128, 128, 128, 0.5);
   display: flex;
-  border-radius: 4px;
   overflow: hidden;
   flex-flow: column nowrap;
 }
 
 tr:nth-child(even) {
-  background-color: white;
+  background: #ffffff;
+  box-shadow: 0 5rem 35rem rgba(0, 0, 0, 0.1);
 }
 
 tr:nth-child(odd) {
-  background-color: rgb(255, 251, 237);
+  background: #ffffff;
+  box-shadow: 0 5rem 35rem rgba(0, 0, 0, 0.1);
 }
-
+.controllers-list{
+  border: none;
+}
 .controllers-list > tbody > .controller-line {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
   align-items: center;
-  padding: 10px 0;
+  padding: 10rem 0;
+  color: white;
+}
+.controllers-list > tbody > tr > td {
+  color: black;
 }
 
 .controllers-list > tbody > .head {
   font-weight: 600;
-  background-color: rgb(255, 246, 168);
+  border-radius: 6rem 6rem 0 0 ;
+  background: rgb(255, 225, 116)
 }
 
 .controllers-list > tbody > .controller-line > .controller-cell {
   display: flex;
+
   align-items: center;
   justify-content: center;
-  width: 100px;
+  width: 100rem;
 }
 
 .controllers-list > tbody > .controller-line > .controller-cell button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 20px;
-  height: 20px;
+  width: 20rem;
+  height: 20rem;
 }
 
 /* Controllers list End*/
@@ -145,82 +199,116 @@ tr:nth-child(odd) {
 /* Controllers Display */
 
 .page-nav-container {
-  margin-top: 10px;
+  margin-top: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
+  gap: 5rem;
 }
 
 .page-nav-container button {
   cursor: pointer;
-  padding: 8px 16px;
+  padding: 8rem 16rem;
   background-color: var(--button-color-main);
-  border-radius: 8px;
+  border-radius: 8rem;
   border: none;
-  font-size: 14px;
+  color: white;
+  font-size: 14rem;
+  background-image: linear-gradient(45deg, #a66924 0%, #da8f26  70%);
 }
 
 /* Controllers Display End */
 
 .update-container {
-  margin-top: 40px;
+  margin-top: 40rem;
   width: 100%;
   padding: 0 20%;
-  border: 1px solid grey;
+  border: 1rem solid grey;
 }
 
 .update-container > .container-column {
   position: relative;
   display: flex;
-  padding: 40px 10%;
+  padding: 40rem 10%;
   align-items: center;
   justify-content: center;
-  border: 1px solid grey;
+  border: 1rem solid grey;
   flex-flow: column nowrap;
-  gap: 5px;
+  gap: 5rem;
 }
 
 .update-container > .container-column > .controller-id {
   width: 100%;
   display: flex;
   justify-content: center;
-  font-size: 26px;
+  font-size: 26rem;
 }
 
 .update-container > .container-column > input {
   width: 100%;
-  padding: 10px 20px;
-  border-radius: 12px;
-  border: 1px solid rgb(160, 160, 160);
+  padding: 10rem 20rem;
+  border-radius: 12rem;
+  border: 1rem solid rgb(160, 160, 160);
 }
 
 .update-container > .container-column > .status {
   width: 100%;
   display: flex;
   justify-content: center;
-  font-size: 26px;
+  font-size: 26rem;
 }
 
 .update-container > .container-column > button {
   width: 100%;
-  padding: 10px 20px;
-  margin-top: 5px;
+  padding: 10rem 20rem;
+  margin-top: 5rem;
   width: 100%;
   border: none;
-  border-radius: 12px;
-  font-size: 14px;
+  border-radius: 12rem;
+  font-size: 14rem;
 }
 .update-container > .container-column > .exit-modal {
   position: absolute;
   user-select: none;
   cursor: pointer;
-  line-height: 10px;
+  line-height: 10rem;
   color: white;
   font-weight: bold;
-  right: 10px;
-  top: 10px;
-  padding: 15px;
-  border-radius: 8px;
+  right: 10rem;
+  top: 10rem;
+  padding: 15rem;
+  border-radius: 8rem;
   background-color: rgba(128, 128, 128, 0.4);
+}
+@media only screen and (max-width: 991px) {
+  .row {
+    width: 100%;
+  }
+  p, td, tr, tbody, span{font-size: 14rem;}
+  .wrapper > p {
+    font-size: 16rem;
+}
+.wrapper > h2 {
+  font-size: 42rem;
+  padding-bottom: 20rem;
+}
+.form-container > .form > .text-field {
+  padding: 7rem 16rem;
+  width: 100%;
+  border-radius: 8rem;
+  border: 1rem solid rgb(213, 213, 213);
+}
+
+}
+@media only screen and (max-width: 767px) {
+  .row {
+    width: 100%;
+  }
+  p, td, tr, tbody, span{font-size: 12rem;}
+}
+@media only screen and (max-width: 477px) {
+  .row {
+    width: 100%;
+  }
+  p, td, tr, tbody, span{font-size: 10rem;}
 }
