--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -50,7 +50,6 @@ html.stopped{
   }
 }
 *{
-	font-smoothing: antialiased;
 	-webkit-font-smoothing: antialiased;
 }
 h1, h2, h3, h4, h5, h6{
@@ -70,54 +69,64 @@ a{
   grid-template-rows: auto;
   grid-template-columns: repeat(2);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
-.wrapper {
+.hero {
+  background-image: linear-gradient(25deg, #77A1D3 0%, #79CBCA  71%, #77A1D3  100%);
+  border-radius: 24rem;
   display: flex;
+  height: 200rem;
   width: 100%;
+  padding: 0 0 0 25rem;
   align-items: center;
-  justify-content: center;
-  flex-flow: column nowrap;
-  padding: 0rem 20%;
+  justify-content: space-between;
+  flex-flow: row nowrap;
 }
 
-.wrapper > h2 {
+.hero > .hero-text-wrap > h2 {
+  color: rgb(255, 255, 255);
   font-size: 48rem;
-  padding-bottom: 20rem;
 }
 
-.wrapper > p {
+.hero > .hero-text-wrap > p {
   text-align: center;
-  font-size: 20rem;
-  font-weight: 400;
-  color: rgb(44, 44, 44);
+  font-size: 24rem;
+  font-weight: 500;
+  color: rgb(255, 255, 255);
   padding-bottom: 20rem;
 }
 
 .form-container {
-  width: 100%;
+height: 50%;
+padding: 25rem 25rem;
 }
 
 .form-container > .form {
   display: flex;
-  flex-flow: column nowrap;
+  height: 100%;
+}
+.form-container > .form > .input-wrap{
+  display: flex;
+  flex-flow: row nowrap;
   align-items: center;
-  padding: 0rem 10%;
+  padding: 0rem 10rem 0 0;
   gap: 5rem;
 }
 
-.form-container > .form > .text-field {
+.form-container > .form > .input-wrap> .text-field-wrap > .text-field {
   padding: 10rem 20rem;
   width: 100%;
+  height: 100%;
   border-radius: 8rem;
-  border: 1rem solid rgb(160, 160, 160);
+  border: none
 }
 
 .form-container > .form > button {
-  padding: 10rem 20rem;
+  align-self: center;
   margin-top: 5rem;
-  width: 100%;
+  width: 200rem;
   border: none;
+  min-height: 100%;
   border-radius: 8rem;
   font-size: 14rem;
   text-align: center;
@@ -125,7 +134,6 @@ a{
   color: white;            
   transition: 1s;
   background-size: 200% auto;
-  box-shadow: 0 0 20rem #eee;
   background-image: linear-gradient(to right, #554431 0%, #da8f26  51%, #554331  100%);
 }
 
