--- a/admin/src/Styles/DisplayContainer.scss
+++ b/admin/src/Styles/DisplayContainer.scss
@@ -1,12 +1,37 @@
-.display-container{
-    min-height: 100vh;
-    width: 100%;
-    grid-row: 1 / span 2;
-    background-color: rgb(225, 225, 225);
-    .center-section{
-        padding: 50rem 75rem;
-        display: flex;
-        flex-flow: column nowrap;
-        
+.display-container {
+  min-height: 100vh;
+  width: 100%;
+  grid-row: 1 / span 2;
+  padding-left: 75rem;
+  padding-right: 75rem;
+  .top-section {
+    padding-top: 50rem;
+    padding-bottom: 0rem;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  .center-section {
+    padding-top: 20rem;
+    padding-bottom: 75rem;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+}
+@media only screen and (max-width: 991px) {
+    .display-container {
+        padding-left: 25rem;
+        padding-right: 25rem;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .display-container {
+        grid-row: 2 / 2;
+        grid-column: 1 / 1;
+    }
+}
+@media only screen and (max-width: 477px) {
+    .display-container {
+        padding-left: 15rem;
+        padding-right: 15rem;
     }
 }
