--- a/admin/src/Styles/Footer.scss
+++ b/admin/src/Styles/Footer.scss
@@ -5,3 +5,17 @@
     grid-column: 1 / span 2;
     background-color: rgb(69, 113, 128);
 }
+@media only screen and (max-width: 991px) {
+    .footer {
+    }
+}
+@media only screen and (max-width: 767px) {
+    .footer {
+        grid-column: 1 / 1;
+    }
+}
+@media only screen and (max-width: 477px) {
+    .footer {
+    
+    }
+}
